[package]
name = "data-exporter"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
chrono = { version = "0.4.42", features = ["serde"] }
serde = "1.0.228"
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }
uuid = { version = "1.11.0", features = ["serde"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
