[package]
name = "data-exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.7"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15"
futures = "0.3"
rust-s3 = "0.37.1"
serde = "1.0.228"
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.11.0", features = ["serde"] }
